# effects-unit

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
EffectsUnit/: .cproject  .mxproject  .project  EffectsUnit Debug.launch  EffectsUnit.ioc  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld
EffectsUnit/Core/Inc/: CS43L22.h  audio_buffers.h  audio_process.h  effects_wrappers.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
EffectsUnit/Core/Src/: CS43L22.c  audio_buffers.c  audio_process.c  effects_wrapper.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
effects/: __init__.py  audioeffect.py  auto_wah.py  bitcrusher.py  chorus.py  compressor.py  delay.py  equaliser_fft.py  flanger.py  noise_gate.py  overdrive.py  pitch_shifter.py  reverb.py  ring_modulator.py  tremolo.py
effects_c/: bitcrusher.c  bitcrusher.h  equaliser.c  equaliser.h  exports.def  overdrive.c  overdrive.h
tests/: tests.py
